Minor edits to text and layout as well as trimming of Contact form.

--- a/about.htm
+++ b/about.htm
@@ -51,22 +51,9 @@
 
 <h4>About Code for Tampa Bay</h4>
 
-<p>Code for Tampa Bay Brigade is part of an international network 
-of people committed to using their voices and hands, in collaboration 
-with local governments, to make their cities better. Code for Tampa Bay Brigade helps build participatory 
-power in their cities by holding regular civic hack nights and events, 
-advocating for open data, and deploying apps. Brigades celebrate and 
-share their successes with the Brigade network to further the global 
-civic innovation movement.</p>
-<p>Code for Tampa Bay Brigade is an organizing force for local civic 
-engagement - a national network of civic-minded volunteers who 
-contribute their skills toward using the web as a platform for local 
-government and community service.</p>
-        <p>We are a <a href="http://brigade.codeforamerica.org/">Code for America</a> brigade,
- a group of volunteers contributing our talents toward improving the way
- our local governments and community organizations use the web. We are about action and if you're someone who likes to take action, you've come to the right place!</p>
+<p>Code for Tampa Bay is a group of volunteers contributing our talents toward improving the way our local governments and community organizations use the web.</p>
 
-
+<p>As a <a href="http://brigade.codeforamerica.org/">Code for America</a> brigade, we are part of an international network of people committed to using their voices and hands, in collaboration with local governments, to make their cities better. Code for America brigades help build participatory power in their cities by holding regular civic hack nights and events, advocating for open data, and deploying apps. Brigades celebrate and share their successes with the Brigade network to further the global civic innovation movement.</p>
 
 <h4>Our Team</h4>
 
@@ -111,62 +98,28 @@ government and community service.</p>
 
 <h4>Community Partners</h4>
       <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-3">
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-6">
              <a href="http://www.redhat.com/en"><img src="imgs/redhat-logo-cloud.jpeg" alt="Red Hat logo"/></a>
               <a href="http://www.meetup.com/Code-for-Tampa-Bay-Brigade/"><img src="imgs/new-logo-reduced.png" alt="Eureka Factory logo"/></a>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
           </div>
       </div>
 
 <h4>Our Code of Conduct</h4>
 
-<p>Code for Tampa Bay abides by <a href="https://github.com/codeforamerica/codeofconduct">Code for America's Code of Conduct</a>, which expects that Code for America network activities, events, and digital forums:</p>
-
-<ol>
-	<li>Are a safe and respectful environment for all participants.</li>
-	<li>Are a place where people are free to fully express their identities.</li>
-	<li>Presume the value of others. Everyone’s ideas, skills, and contributions have value.</li>
-	<li>Don’t assume everyone has the same context, and encourage questions.</li>
-	<li>Find a way for people to be productive with their skills (technical
- and not) and energy. Use language such as “yes/and”, not “no/but.”</li>
-	<li>Encourage members and participants to listen as much as they speak.</li>
-	<li>Strive to build tools that are open and free technology for public 
-use. Activities that aim to foster public use, not private gain, are 
-prioritized.
-	</li>
-	<li>Prioritize access for and input from those who are traditionally excluded from the civic process.</li>
-	<li>Work to ensure that the community is well-represented in the 
-planning, design, and implementation of civic tech. This includes 
-encouraging participation from women, minorities, and traditionally 
-marginalized groups.</li>
-	<li>Actively involve community groups and those with subject matter expertise in the decision-making process.</li>
-	<li>Ensure that the relationships and conversations between community 
-members, the local government staff and community partners remain 
-respectful, participatory, and productive.</li>
-	<li>Provide an environment where people are free from discrimination or harassment.</li>
-</ol>
-
-
-		<h2>Code for Tampa Bay Docs</h2>
-				<ul>
-					<li><a href="https://drive.google.com/open?id=0B99kcFct-I-MdzQxQnEwQmt5Ykk&amp;authuser=0" target="_blank">Code for Tampa Bay 2015 Strategic Plan</a></li>
-					<li><a href="https://drive.google.com/file/d/0B99kcFct-I-MVG81NGVCeG9RZkk/view?usp=sharing" target="_blank">About Code for Tampa Bay Flyer</a></li>
-					<li><a href="https://drive.google.com/file/d/0B99kcFct-I-MblIyZGNMcndwbTQ/view?usp=sharing" target="_blank">Join Code for Tampa Bay Flyer</a></li>
-					<li><a href="https://drive.google.com/open?id=0B99kcFct-I-MODZoZ2ZMaVlmS2c&amp;authuser=0" target="_blank">2014 Hillsborough Hackathon project presentation</a></li>
-					<li><a href="https://drive.google.com/open?id=0B99kcFct-I-MSGE1Vmw2Q2lCekk&amp;authuser=0" target="_blank">Tampa Bay Community Profile</a></li>
-				</ul>
+<p>Code for Tampa Bay abides by <a href="https://github.com/codeforamerica/codeofconduct">Code for America's Code of Conduct</a>.</p>
 
 
 
-<p>Code for America reserves the right to ask anyone in violation of 
-these policies not to participate in Code for America network 
-activities, events, and digital forums. Additionally, all
- Code for America network activities, events, and digital forums and 
-their staff, presenters, and participants are held to an anti-harassment
- policy, which can be read in its entirety at <a href="https://github.com/codeforamerica/codeofconduct%E2%80%8B">https://github.com/codeforamerica/codeofconduct</a>.</p>
+
+
+
+<p>Code for America reserves the right to ask anyone in violation of these policies not to participate in Code for America network 
+activities, events, and digital forums. Additionally, all Code for America network activities, events, and digital forums and 
+their staff, presenters, and participants are held to an anti-harassment policy, which can be read in its entirety at <a href="https://github.com/codeforamerica/codeofconduct%E2%80%8B">https://github.com/codeforamerica/codeofconduct</a>.</p>
 <p>You can also email Terri @ WillinghamLLC.com for more information.</p>                
 		</div>
       
