--- a/index.htm
+++ b/index.htm
@@ -48,9 +48,10 @@
     </nav>       
 
 	<div class="jumbotron">
-		<h1>Need some help?</h1>
+		<h1>Code for Tampa Bay</h1>
+    <h2>Need some help?</h2>
 		<p class="lead">We're a bunch of civic-minded geeks volunteering our skills and expertise to public agencies and non-profits. Get help solving a problem or help identifying areas for improvement under <strong>Contact</strong>.</p>
-<h1>Want to help?</h1>
+<h2>Want to help?</h2>
         <p class="lead">We are about action and if you're someone who likes to take action, find out how under <strong>Participate</strong>!</p>
 	</div> <!-- /Jumbotron -->
 
