--- a/participate.htm
+++ b/participate.htm
@@ -41,13 +41,12 @@
       <a
             href="http://www.hcplc.org/hcplc/locations/hve/"><img src="imgs/hillsborough-hive.png" class="newsImgRight"></a>
       <h4>Join Us!</h4>
-      <p>Help build bridges and tear down walls! Help make
-        Tampa Bay better, brighter and more transparent for all!</p>
+      <p>Help build bridges and tear down walls! Help make Tampa Bay better, brighter and more transparent for all!</p>
       <p>We meet monthly at <a
             href="http://www.hcplc.org/hcplc/locations/hve/">The Hive</a>, typically the first Monday of each month. Come have some free pizza and pop, stick around for presentations on a variety of topics, and if you like what you see--introduce yourself! Confirm dates and times on our <a href="http://www.meetup.com/Code-for-Tampa-Bay-Brigade/">MeetUp</a> page. 
 <p>&nbsp;</p>
       
-      <p>       
+             
       <div class="row">
           <div class="col-lg-4">
           </div>
@@ -62,6 +61,20 @@
           <div class="col-lg-4">
           </div>
       </div>
+
+      <div class="row">
+          <div class="col-lg-12">
+            <h4>Code for Tampa Bay Docs</h4>
+              <ul>
+                <li><a href="https://drive.google.com/open?id=0B99kcFct-I-MdzQxQnEwQmt5Ykk&amp;authuser=0" target="_blank">Code for Tampa Bay 2015 Strategic Plan</a></li>
+                <li><a href="https://drive.google.com/file/d/0B99kcFct-I-MVG81NGVCeG9RZkk/view?usp=sharing" target="_blank">About Code for Tampa Bay Flyer</a></li>
+                <li><a href="https://drive.google.com/file/d/0B99kcFct-I-MblIyZGNMcndwbTQ/view?usp=sharing" target="_blank">Join Code for Tampa Bay Flyer</a></li>
+                <li><a href="https://drive.google.com/open?id=0B99kcFct-I-MODZoZ2ZMaVlmS2c&amp;authuser=0" target="_blank">2014 Hillsborough Hackathon project presentation</a></li>
+                <li><a href="https://drive.google.com/open?id=0B99kcFct-I-MSGE1Vmw2Q2lCekk&amp;authuser=0" target="_blank">Tampa Bay Community Profile</a></li>
+              </ul>
+          </div>
+      </div>
+
     </div>    <!-- /container -->
     <p>&nbsp;</p>
         <footer class="footer">
