Further trimming plus new images and links.

--- a/about.htm
+++ b/about.htm
@@ -53,7 +53,9 @@
 
 <p>Code for Tampa Bay is a group of volunteers contributing our talents toward improving the way our local governments and community organizations use the web.</p>
 
-<p>As a <a href="http://brigade.codeforamerica.org/">Code for America</a> brigade, we are part of an international network of people committed to using their voices and hands, in collaboration with local governments, to make their cities better. Code for America brigades help build participatory power in their cities by holding regular civic hack nights and events, advocating for open data, and deploying apps. Brigades celebrate and share their successes with the Brigade network to further the global civic innovation movement.</p>
+<p>As a <a href="http://www.codeforamerica.org/">Code for America</a> brigade, we are part of an international network of people committed to using their voices and hands, in collaboration with local governments, to make their cities better. Code for America brigades help build participatory power in their cities by holding regular civic hack nights and events, advocating for open data, and deploying apps. Brigades celebrate and share their successes with the Brigade network to further the global civic innovation movement.</p>
+
+<p>Code for Tampa Bay abides by <a href="https://github.com/codeforamerica/codeofconduct">Code for America's Code of Conduct</a>.</p>
 
 <h4>Our Team</h4>
 
@@ -62,7 +64,7 @@
 <ul>
 	<li><em>Captain(s): </em><a href="mailto:jpunzak@redhat.com?subject=Code%20for%20Tampa%20Bay%20Inquiry">John Punzak</a> &amp; <a href="mailto:terri@WillinghamLLC.com?subject=Code%20for%20Tampa%20Bay%20Inquiry">Terri Willingham</a></li>
 	<li><em>Storyteller </em>: Phil Muino</li>
-	<li><em>Community Organizer: </em>Terri Willingham</li>
+	<li><em>Community Organizer: </em><a href="mailto:Terri@WillinghamLLC.com">Terri Willingham</a></li>
 	<li><em>Delivery Lead: </em><a href="mailto:clwillingham@gmail.com?subject=Code%20for%20Tampa%20Bay%20Inquiry">Chris Willingham</a></li>
 </ul>
 
@@ -108,19 +110,8 @@
           </div>
       </div>
 
-<h4>Our Code of Conduct</h4>
 
-<p>Code for Tampa Bay abides by <a href="https://github.com/codeforamerica/codeofconduct">Code for America's Code of Conduct</a>.</p>
-
-
-
-
-
-
-<p>Code for America reserves the right to ask anyone in violation of these policies not to participate in Code for America network 
-activities, events, and digital forums. Additionally, all Code for America network activities, events, and digital forums and 
-their staff, presenters, and participants are held to an anti-harassment policy, which can be read in its entirety at <a href="https://github.com/codeforamerica/codeofconduct%E2%80%8B">https://github.com/codeforamerica/codeofconduct</a>.</p>
-<p>You can also email Terri @ WillinghamLLC.com for more information.</p>                
+                
 		</div>
       
 	<!-- Site footer -->
