--- a/participate.htm
+++ b/participate.htm
@@ -48,17 +48,22 @@
       
              
       <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-3">
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-6">
               <a href="http://www.facebook.com/CodeforTampaBay"><img src="imgs/c_Facebook.png" width="51" height="51" alt="Facebook logo"/></a>
               <a
                 href="https://groups.google.com/forum/#%21forum/code-for-tb"
                 target="_blank"><img src="imgs/c_gGroups.png" width="auto" height="51" alt="Google Groups logo"/></a>
               <a href="http://www.meetup.com/Code-for-Tampa-Bay-Brigade/"><img src="imgs/c_Meetup.png" width="51" height="51" alt="Meetup logo"/></a>
               <a href="https://twitter.com/CodeForTampaBay"><img src="imgs/c_Twitter.png" width="51" height="51" alt="Twitter logo"/></a>
+              <a href="#"><img src="imgs/c_GitHub.png" width="51" height="51" alt="GitHub logo"></a>
+              <a href="http://suncoast.io/"><img src="imgs/c_suncoastDev.png" width="auto" height="51" alt="Suncoast Developers Guild logo"></a>
+              <a href="https://suncoast-devs.slack.com"><img src="imgs/c_Slack.png" width="51" height="51" alt="Slack logo"></a>
+
+
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
           </div>
       </div>
 
