Sane styles and consistent heads

--- a/about.htm
+++ b/about.htm
@@ -8,8 +8,9 @@
   <!-- Bootstrap -->
 	<link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
   <script src="styles/bootstrap/js/bootstrap.min.js"></script>
+
   <!-- modifications I made -->
-  <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/justified-nav.css">
+  <link rel="stylesheet" type="text/css" href="styles/myStyle.css">
 
   <!-- Come up with some sort of pirate-themed favicon and/or logo -->
 	<LINK href="imgs/favicon.ico" rel="icon" type="image/x-icon">
