--- a/contact.htm
+++ b/contact.htm
@@ -2,14 +2,20 @@
 <HTML>
 <HEAD>
 
-	<link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
-    <script src="styles/bootstrap/js/bootstrap.min.js"></script>
+  <!-- jQuery first because Bootstrap requires it -->
+  <script src="js/jquery-214.js" language="javascript" type="text/javascript"></script>
 
-    <script src="js/jquery-214.js" language="javascript" type="text/javascript"></script>
+  <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
+  <script src="styles/bootstrap/js/bootstrap.min.js"></script>
 
-	<LINK href="imgs/favicon.ico" rel="icon" type="image/x-icon">
-    <LINK href="imgs/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <LINK href="imgs/favicon.ico" rel="icon" type="image/ico">   
+  <!-- modifications I made -->
+  <link rel="stylesheet" type="text/css" href="styles/myStyle.css">
+
+  <!-- Come up with some sort of pirate-themed favicon and/or logo -->
+    <LINK href="imgs/favicon.ico" rel="icon" type="image/x-icon">
+  <LINK href="imgs/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <LINK href="imgs/favicon.ico" rel="icon" type="image/ico">   
 
     <TITLE>Code for Tampa Bay: Contact</TITLE>	 
 
@@ -19,10 +25,8 @@
 
 	<div class="container">
     	<div class="masthead">
-
-        <img src="imgs/1140_03_01.png" id="masthead"/>
-
-		  </div> <!-- /masthead -->
+            <img src="imgs/1140_03_01.png" id="masthead"/>
+		</div> <!-- /masthead -->
                 
         <nav class="navbar navbar-default">
             <div class="container-fluid">
