--- a/index.htm
+++ b/index.htm
@@ -6,16 +6,17 @@
   <script src="js/jquery-214.js" language="javascript" type="text/javascript"></script>
 
   <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
   <script src="styles/bootstrap/js/bootstrap.min.js"></script>
+
   <!-- modifications I made -->
-  <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/justified-nav.css">
+
+  <link rel="stylesheet" type="text/css" href="styles/myStyle.css">
 
   <!-- Come up with some sort of pirate-themed favicon and/or logo -->
-	<LINK href="imgs/favicon.ico" rel="icon" type="image/x-icon">
+  <LINK href="imgs/favicon.ico" rel="icon" type="image/x-icon">
   <LINK href="imgs/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <LINK href="imgs/favicon.ico" rel="icon" type="image/ico">   
-
+  <LINK href="imgs/favicon.ico" rel="icon" type="image/ico"> 
 
   <TITLE>Code for Tampa Bay: Home</TITLE>	 
 
@@ -50,9 +51,9 @@
 	<div class="jumbotron">
 		<h1>Code for Tampa Bay</h1>
     <h2>Need some help?</h2>
-		<p class="lead">We're a bunch of civic-minded geeks volunteering our skills and expertise to public agencies and non-profits. Get help solving a problem or help identifying areas for improvement under <strong>Contact</strong>.</p>
+		<p class="lead">We're a bunch of civic-minded geeks offering to volunteer technical skills and expertise to public agencies and non-profit organizations in need. Get help solving a problem or get help identifying areas for improvement under <strong>Contact</strong>.</p>
 <h2>Want to help?</h2>
-        <p class="lead">We are about action and if you're someone who likes to take action, find out how under <strong>Participate</strong>!</p>
+        <p class="lead">Find out how to learn new skills while gaining experience or how to mentor others while serving your community under <strong>Participate</strong>!</p>
 	</div> <!-- /Jumbotron -->
 
 
