--- a/participate.htm
+++ b/participate.htm
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-    <link rel="stylesheet" type="text/css" href="styles/myStyle.css">
-    <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
-    <script src="styles/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/jquery-214.js" language="javascript" type="text/javascript"></script>
-   
-    <link href="imgs/favicon.ico" rel="icon" type="image/x-icon">
-    <link href="imgs/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="imgs/favicon.ico" rel="icon" type="image/ico">
+
+  <!-- jQuery first because Bootstrap requires it -->
+  <script src="js/jquery-214.js" language="javascript" type="text/javascript"></script>
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
+  <script src="styles/bootstrap/js/bootstrap.min.js"></script>
+
+  <!-- modifications I made -->
+  <link rel="stylesheet" type="text/css" href="styles/myStyle.css">
+
+  <!-- Come up with some sort of pirate-themed favicon and/or logo -->
+  <LINK href="imgs/favicon.ico" rel="icon" type="image/x-icon">
+  <LINK href="imgs/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <LINK href="imgs/favicon.ico" rel="icon" type="image/ico"> 
     
     <title>Code for Tampa Bay: Participate</title>
   </head>
   
   <body>
     <div class="container">
-      <div class="masthead">
     	<div class="masthead">
         	<img src="imgs/1140_04_01.png" id="masthead"/>
 		</div> <!-- /masthead -->
-      <!-- /masthead -->
+
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header"> <a class="navbar-brand"
