--- a/news.htm
+++ b/news.htm
@@ -1,19 +1,29 @@
 <!DOCTYPE HTML>
 <HTML>
 <HEAD>
-<link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="styles/myStyle.css">
-<script src="styles/bootstrap/js/bootstrap.min.js"></script>
-<script src="js/jquery-214.js" language="javascript" type="text/javascript"></script>
-<LINK href="imgs/favicon.ico" rel="icon" type="image/x-icon">
-<LINK href="imgs/favicon.ico" rel="shortcut icon" type="image/x-icon">
-<LINK href="imgs/favicon.ico" rel="icon" type="image/ico">
+
+  <!-- jQuery first because Bootstrap requires it -->
+  <script src="js/jquery-214.js" language="javascript" type="text/javascript"></script>
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
+  <script src="styles/bootstrap/js/bootstrap.min.js"></script>
+
+  <!-- modifications I made -->
+  <link rel="stylesheet" type="text/css" href="styles/myStyle.css">
+
+  <!-- Come up with some sort of pirate-themed favicon and/or logo -->
+  <LINK href="imgs/favicon.ico" rel="icon" type="image/x-icon">
+  <LINK href="imgs/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <LINK href="imgs/favicon.ico" rel="icon" type="image/ico"> 
+
 <TITLE>Code for Tampa Bay: News</TITLE>
+
 </HEAD>
 
 <BODY>
 <div class="container">
- <div class="masthead"> 
+
     	<div class="masthead">
         	<img src="imgs/1140_02_01.png" id="masthead" />
 		</div> <!-- /masthead -->
