update images and link in About

--- a/about.htm
+++ b/about.htm
@@ -91,8 +91,8 @@
           <div class="col-lg-4">
           </div>
           <div class="col-lg-4">
-              <img src="imgs/HillsCoLogo.png" alt="Hillsborough County logo"/>
-             <a href="http://www.meetup.com/Code-for-Tampa-Bay-Brigade/"><img src="imgs/edi2_logo.jpg" alt="Hillsborough County Economic Development Office"/></a>
+              <img src="imgs/p_HillsCo.png" alt="Hillsborough County logo"/>
+             <a href="http://www.meetup.com/Code-for-Tampa-Bay-Brigade/"><img src="imgs/p_EDi2.png" alt="Hillsborough County Economic Development Office"/></a>
           </div>
           <div class="col-lg-4">
           </div>
@@ -104,8 +104,8 @@
           <div class="col-lg-3">
           </div>
           <div class="col-lg-6">
-             <a href="http://www.redhat.com/en"><img src="imgs/redhat-logo-cloud.jpeg" alt="Red Hat logo"/></a>
-              <a href="http://www.meetup.com/Code-for-Tampa-Bay-Brigade/"><img src="imgs/new-logo-reduced.png" alt="Eureka Factory logo"/></a>
+             <a href="http://www.redhat.com/en"><img src="imgs/p_redhat.png" alt="Red Hat logo"/></a>
+              <a href="http://eurekafactory.net/"><img src="imgs/p_eureka.png" alt="Eureka Factory logo"/></a>
           </div>
           <div class="col-lg-3">
           </div>
